--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rudra.cryptoapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.NewsActivity"></activity>
         <activity android:name=".ui.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,10 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".auth.Signup" />
-        <activity android:name=".auth.Login">
-            
-        </activity>
-        <activity android:name=".ui.HomeActivity"></activity>
+        <activity android:name=".auth.Login"></activity>
+        <activity android:name=".ui.HomeActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
